--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -3,7 +3,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="@dimen/margin_size_5dp"
+    android:layout_marginLeft="@dimen/margin_size_5dp"
+    android:layout_marginTop="@dimen/margin_size_20dp"
+    android:layout_marginRight="@dimen/margin_size_5dp"
+    android:layout_marginBottom="@dimen/margin_size_30dp"
     android:background="@drawable/background">
 
     <LinearLayout
